updating to om_weka

--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -40,11 +40,11 @@
     "    analysis_dir='/Users/eghbalhosseini/MyData/neural_nlp_bench/analysis/roberta/'\n",
     "    result_dir='/Users/eghbalhosseini/.result_caching/neural_nlp.score'\n",
     "elif user=='ehoseini':\n",
-    "    analysis_dir='/om/user/ehoseini/MyData/neural_nlp_bench/analysis/roberta/'\n",
-    "    result_dir='/om/user/ehoseini/.result_caching/neural_nlp.score'\n",
+    "    analysis_dir='/om/weka/evlab/ehoseini/MyData/neural_nlp_bench/analysis/roberta/'\n",
+    "    result_dir='/om/weka/evlab/ehoseini/.result_caching/neural_nlp.score'\n",
     "\n",
     "martins_data='/braintree/home/msch/.result_caching/neural_nlp.score'\n",
-    "martins_data='/om/user/ehoseini/.result_caching/neural_nlp.score/from_martin'"
+    "martins_data='/om/weka/evlab/ehoseini/.result_caching/neural_nlp.score/from_martin'"
    ]
   },
   {
